# playground

./: .gitignore  configure.ac
src/: Makefile.am
src/audio/: FileInputStream.cc  FileInputStream.h  FileOutputStream.cc  FileOutputStream.h  FourierTransformer.cc  FourierTransformer.h  Makefile.am  MicInputStream.cc  MicInputStream.h  Pipe.cc  Pipe.h  PipeStrategy.h  SoundBuffer.cc  SoundBuffer.h  SoundInputStreamInterface.h  SoundOutputInterface.h  SoundOutputStreamInterface.h  SoundTransformerInterface.h  create-wav.cc  pipe.cc  record.cc
src/av/: Makefile.am  TransformVisualizer.cc  TransformVisualizer.h  VisualSoundOutputStream.cc  VisualSoundOutputStream.h  VisualizerInterface.h  display_strategies  ftviz.cc
src/test/: Makefile.am
src/test/audio/: Makefile.am  file-input-stream-test.cc  sound-buffer-test.cc
src/test/av/: Makefile.am  transform-visualizer-test.cc  visual-sound-output-stream-test.cc
src/test/video/: Makefile.am  bar-grapher-sdl-demo.cc  bar-grapher-test.cc  sdl-screen-demo.cc
src/video/: BarGrapher.cc  BarGrapher.h  FtVisualOutputStream.h  GrapherInterface.h  Makefile.am  SDLScreen.cc  SDLScreen.h  ScreenInterface.h
